--- a/library-components/build.gradle
+++ b/library-components/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'com.android.library'
 }
 
+///[jitpack#publish]https://jitpack.io/docs/ANDROID/
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.yongtiger'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -12,7 +16,6 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -22,6 +25,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
